<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">News Debug</string>
    <string name="title_section1">News Debug</string>
    <string name="title_section2">Latest News</string>
    <string name="title_section3" translatable="false">Section 3</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_catalog" translatable="false">action catalog</string>
    <string name="confirm_update">OK</string>
    <string name="remind_me_later">Remind Later</string>
    <string name="version_update_hint1">There is newer version </string>
    <string name="version_update_hint2"> of this application available, click OK to upgrade now?</string>

    <!-- Common -->
    <string name="uri_front_page" translatable="false">http://ec2-54-92-66-45.ap-northeast-1.compute.amazonaws.com:9090</string>


    <!-- Part I: Topic List -->

    <string name="topic_list_cd_topic_banner">Hottest topic banner.</string>
    <string name="todo_topic_list_item_title">Topic</string>
    <string name="todo_topic_list_item_abstract_text">Simple description.</string>
    <string name="topic_list_item_left_square_brackets" translatable="false">[</string>
    <string name="topic_list_item_right_square_brackets" translatable="false">]</string>
    <string name="topic_list_item_keyword">keyword</string>
    <string name="topic_list_item_cd_image">Image of the topic.</string>
    <string name="topic_list_item_cd_review">Reviews status of the topic.</string>
    <string name="topic_list_item_cd_pinned">Pinned topic.</string>

    <!-- Part II: Latest News -->
    <string name="latest_news_favor_index">HOT</string>
    <string name="latest_news_media_title">Media</string>
    <string name="latest_news_publish_time">2014/10/24</string>
    <string name="latest_news_title">Latest News Title</string>
    <string name="latest_news_cd_photo">Photo of latest news</string>
    <string name="violation_tag">Improper title</string>

    <!-- Part III: Topic Introduction -->
    <string name="title_activity_topic_introduction">TopicIntroductionActivity</string>
    <string name="topic_introduction_title">Topic Title</string>


</resources>
