<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/latest_news_list_item_height"
                android:orientation="vertical"
                android:background="@drawable/list_item_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_news_favor_index"
        android:id="@+id/tv_latest_news_favor_index"
        android:textColor="@color/color_latest_news_favor_index_hot"
        android:textSize="@dimen/latest_news_favor_index_font_size"
        android:layout_marginLeft="@dimen/latest_news_favor_index_left"
        android:layout_marginBottom="@dimen/latest_news_favor_index_bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_news_media_title"
        android:id="@+id/tv_latest_news_media_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/latest_news_media_title_top"
        android:layout_marginRight="@dimen/latest_news_media_title_right"
        android:textSize="@dimen/latest_news_media_title_font_size"
        android:textColor="@color/color_latest_news_media_title_apple_daily"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_news_publish_time"
        android:id="@+id/tv_latest_news_publish_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/latest_news_publish_time_font_size"
        android:layout_marginRight="@dimen/latest_news_publish_time_right"
        android:layout_marginBottom="@dimen/latest_news_publish_time_bottom"
        android:textColor="@color/color_latest_news_publish_time_apple_daily"/>

    <ImageView
        android:layout_width="@dimen/latest_news_photo_height"
        android:layout_height="@dimen/latest_news_photo_width"
        android:id="@+id/iv_latest_news_photo"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_photo"
        android:layout_marginRight="@dimen/latest_news_photo_right"
        android:layout_marginBottom="@dimen/latest_news_photo_bottom"
        android:layout_alignParentBottom="false"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_news_title"
        android:id="@+id/tv_latest_news_title"
        android:lines="@integer/latest_news_title_lines"
        android:textSize="@dimen/latest_news_title_font_size"
        android:textColor="@color/color_latest_news_title"
        android:layout_marginLeft="@dimen/latest_news_title_left"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_toLeftOf="@+id/tv_latest_news_publish_time"
        android:layout_toStartOf="@+id/tv_latest_news_publish_time"
        android:layout_centerVertical="true"/>
</RelativeLayout>